criação do footer, e menu lateral

--- a/style.css
+++ b/style.css
@@ -1,273 +1,351 @@
 body {
-  margin: 0;
-  background-color: #e2cebc;
+    margin: 0px;
+    background-color: #e0b38b86;
+    font-family: Inter, "Arial";
 }
 
 .navbar {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 16px 120px;
-  background-color: #ede3da;
-  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+    background-color: #ab947f70;
+    box-shadow: 0px 0px 10px 10px rgba(0, 0, 0, 0.313);
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    height: 100px;
+    width: 100%;
 }
 
-#menu_mobile svg {
-  display: none;
+.logo {
+    margin-left: 50px;
 }
 
 nav {
-  display: flex;
-  gap: 34px;
+    display: flex;
+    gap: 20px;
+    margin-right: 40px;
+    align-items: center;
 }
-
 nav a,
 nav button {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  color: #3c3a36;
-  text-decoration: none;
-  background-color: inherit;
-  text-transform: uppercase;
-  padding: 8px 12px;
-  border-radius: 4px;
-  cursor: pointer;
-
-  font-size: 14px;
-  font-weight: 500;
-  font-family: Inter, sans-serif;
+    text-decoration: none;
+    color: #ca9566;
+    background-color: rgba(0, 255, 255, 0);
+    padding: 10px;
+    border: none;
+    font-size: 20px;
+    transition: 0.3s;
 }
 
 nav a:hover,
 nav button:hover {
-  background-color: #3c3a360d;
-  transition: background-color 0.3s;
+    color: #ca9566;
+    cursor: pointer;
+    background-color: #dbc2b0;
+    border-radius: 5px;
 }
 
-nav a.active,
-nav button.active {
-  background-color: #e2cebc;
+.produto img {
+    width: 200px;
 }
 
-.dropdown-menu {
-  display: none;
-}
-
-nav button {
-  border: none;
-}
-
-.shop-main {
-  display: flex;
-}
-
-.shop-main h2 {
-  font-size: 18px;
-  margin-bottom: 10px;
-  font-weight: bold;
-}
-
-.main-filter {
-  padding: 30px;
-}
-
-.main-filter section {
-  padding: 20px 0px;
-  width: max-content;
-}
-
-.main-filter .form-item {
-  margin-top: 5px;
-}
-
-.product-footer button {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  color: #3c3a36;
-  text-decoration: none;
-  background-color: inherit;
-  text-transform: uppercase;
-  padding: 8px 12px;
-  border-radius: 4px;
-  cursor: pointer;
-
-  font-size: 14px;
-  font-weight: 500;
-  font-family: Inter, sans-serif;
-}
-
-.product-footer button:hover {
-  background-color: #3c3a360d;
-  transition: background-color 0.3s;
-}
-
-.products-wapper {
-  margin-top: 50px;
-  display: flex;
-  flex-wrap: wrap;
-  grid-gap: 30px;
-  justify-content: center;
-}
-
-/* Section Product */
-.product-card {
-  display: flex;
-  flex-direction: column;
-  border: 1px #c0bcb9 solid;
-  border-radius: 13px;
-  width: 300px;
-}
-
-.product-image {
-  border-radius: 12px 12px 0 0;
-}
-
-.product-content {
-  display: flex;
-  flex-direction: column;
-  background-color: #ede3da;
-  padding: 20px 15px;
-  border-radius: 0 0 12px 12px;
-}
-
-.product-title {
-  font-size: 22px;
-  font-weight: bold;
-  color: #3c3a36;
-}
-
-.product-description {
-  font-size: 18px;
-  margin-top: 10px;
-  color: #5e5c59;
-}
-
-.product-variations {
-  font-size: 18px;
-  margin-top: 10px;
-  color: #5e5c59;
-  font-style: italic;
-}
-
-.product-price {
-  margin-top: 8px;
-  font-size: 22px;
-  font-weight: bold;
-}
-
-.product-image-wrapper {
-  display: flex;
-}
-
-.product-image-wrapper img {
-  width: 100%;
-  height: 400px;
-  object-fit: cover;
-}
-
-.product-footer {
-  display: flex;
-  justify-content: space-between;
-}
-
-.product-cart-button {
-  display: flex;
-  justify-content: center;
-  gap: 10px;
-}
-
-.product-cart-button svg {
-  width: 20px;
-}
-
-main {
-  padding: 40px;
-}
-
-.shop-title h1 {
-  font-size: 36px;
-  font-weight: bold;
-  margin-top: 10px;
-}
-
-.shop-title p {
-  margin-top: 10px;
-  font-size: 18px;
-  color: #5e5c59;
-}
-
-@media (max-width: 875px) {
-  .navbar {
-    position: relative;
-  }
-
-  nav {
-    display: none;
+.produto {
+    display: flex;
     flex-direction: column;
-    position: absolute;
-    background-color: #ede3da;
-    left: 0px;
+    padding: 10px; 
+}
+
+.area-produtos {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+}
+
+.preco {
+    color: red;
+    font-weight: bold;
+    margin-left: 10px;
+    margin: 10px;
+    font-size: 20px;
+}
+
+.titulo-produto {
+    margin-left: 10px;
+    font-weight: bold;
+}
+
+.produto button {
+    color: black;
+    border: 2px solid black;
+    width: 100px;
+    border-radius: 2px;
+    height: 40px;
+    display: flex;
+    font-size: 17px;
+    font-weight: bold;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(187, 0, 0, 0);
+}
+
+.produto button:hover {
+    color: rgb(23, 23, 23);
+    cursor: pointer;
+    border: 2px solid rgb(53, 53, 53);
+    background-color: rgba(105, 105, 105, 0.171);
+}
+
+.menu-lateral {
+    display: flex;
+    flex-direction: column;
+    background-color: #9a663863;
+    width: 240px;
+    padding: 10px;
+}
+
+.menu-lateral div { 
+    font-weight: bold;
+    padding: 5px 10px; 
+    display: flex;  
+}
+
+.menu-lateral hr { 
+    border: 1px solid rgba(99, 99, 99, 0.623);
     width: 100%;
-    top: 80px;
-    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
-    gap: 0px;
-  }
+}
 
-  nav a,
-  nav button {
-    padding: 20px 0px;
-    font-size: 16px;
-  }
+.menu-lateral button { 
+    width: 200px;
+    background-color: #c47531;
+    color: black; 
+    height: 40px;
+    border: none;
+}
+.avaliacao{
+    display: flex;
+    flex-direction: column; 
+}
+.menu-lateral button:hover {  
+    background-color: #a35f24; 
+    cursor: pointer;
+}
 
-  .navbar {
-    padding: 10px 30px;
-  }
+.menu-lateral input[type="checkbox"] { 
+    width: 20px;
+    height: 20px;
+    background-color: #333;
+}
 
-  #menu_mobile svg {
-    display: block;
-    width: 45px;
-  }
+ 
 
-  #menu_open {
-    animation: fade-out 1s;
-    transition: display 1s;
-  }
+section {
+    display: flex;
+    margin: 100px;
+}
 
-  .hide {
+.icone-menu {
     display: none;
-  }
+    position: absolute;
+    right: 50px;
+}
 
-  .logo svg {
-    width: 10rem;
-  }
 
-  nav a.active,
-  nav button.active {
-    background-color: inherit;
-  }
+.botao-filtros {
+    display: none;
+    background-color: #b8542292;
+    color: white;
+    width: 70%;
+}
 
-  .dropdown {
+.menu-lateral-navbar {
+    position: fixed;
+    top: 0;
+    left: -200px;
+    width: 200px;
+    height: 100%;
+    background: #333;
+    padding-top: 50px;
+    transition: left 0.3s ease;
+}
+
+.botoes-dentro-menu {
+    display: block;
+    color: white;
+    text-decoration: none;
+    padding: 10px;
+}
+
+.botoes-dentro-menu:hover {
+    background: #555;
+}
+
+.imagem-inicial img{
+    width: 100%; 
+}
+
+.imagem-inicial  { 
     display: flex;
     justify-content: center;
-  }
+    align-items: center;
+}
 
-  main {
-    padding: 40px 10px;
-  }
+.categorias{
+    display: flex;
+    gap: 20px; 
+    justify-content: center;
+    align-items: center;
+}
 
-  .shop-title h1 {
-    font-size: 28px;
-  }
+.categorias div{
+    display: flex;
+    width: 150px;
+    transition: 0.6s;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
 
-  .shop-title p {
-    font-size: 16px;
-  }
+.categorias img{ 
+    width: 130px; 
+}
 
-  .main-filter {
-    display: none;
-  }
+.categorias a{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    text-decoration: none;
+    justify-content: center;
+    align-items: center;
+    color: black;
+    font-weight: bold;
+}
+
+ 
+
+footer {
+    background-color: #3a3a3a;
+    padding: 20px;
+    text-align: center;
+    color: white;
+    font-family: Arial, sans-serif;
+    border-top: 1px solid #e9ecef;
+}
+footer h2 {
+    font-size: 24px;
+    margin-bottom: 10px;
+}
+footer h3 {
+    font-size: 20px;
+    margin-bottom: 10px;
+}
+footer p {
+    font-size: 14px;
+    margin: 5px 0;
+}
+.footer-ctt, .social-media {
+    margin: 15px 0;
+
+}
+
+.footer-ctt a {
+color: white;
+font-weight: bold;
+}
+
+.social-media a {
+    text-decoration: none;
+    color: #007bff;
+    margin: 0 10px;
+}
+.social-media a:hover {
+    text-decoration: underline;
+}
+
+
+
+@media (max-width: 1200px) {
+
+    .area-produtos {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+    }
+
+    nav {
+        margin-right: 0px;
+    }
+
+    nav a,
+    nav button {
+        gap: 1;
+        font-size: 15px;
+        padding: 5px;
+    }
+
+    .logo {
+        margin-left: 0px;
+    }
+
+}
+
+@media (min-width: 600px) {
+    .menu-lateral-navbar {
+        display: none;
+    }
+
+
+}
+
+@media (max-width: 900px) {
+    nav {
+        display: none;
+    }
+
+    .icone-menu {
+        display: block;
+    }
+
+    .area-produtos {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media (max-width: 600px) {
+    .menu-lateral {
+        display: none;
+    }
+
+    .botao-filtros {
+        display: block;
+    }
+
+    section {
+        display: flex;
+        margin: 10px;
+    }
+
+    .produto img {
+        width: 170px;
+    }
+
+    .produto {
+        padding: 5px;
+    }
+
+    .titulo-produto {
+        font-size: 13px;
+    }
+
+    .produto button {
+        width: 80px;
+        height: 30px;
+        font-size: 15px;
+    }
+
+
+}
+
+@media (max-width: 500px) {
+    .icone-menu {
+        right: 25px;
+    }
+
 }
