--- a/Zara/zaraFiltro/style.css
+++ b/Zara/zaraFiltro/style.css
@@ -69,7 +69,27 @@ nav button {
   font-weight: bold;
 }
 
+#filter_menu {
+  margin-top: 15px;
+  cursor: pointer;
+  position: absolute;
+}
+
+#filter_menu .show {
+  width: 35px;
+  display: block;
+
+}
+
+#filter_menu .hide {
+  width: 35px;
+  margin-left: 0px;
+  display:none;
+}
+
 .main-filter {
+  display: none;
+  flex-direction: column;
   padding: 30px;
 }
 
@@ -200,6 +220,85 @@ main {
   color: #5e5c59;
 }
 
+hr {
+  border: 1px #77736a solid;
+}
+
+footer {
+  background-color: #e2cebc;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-direction: column;
+  height: 400px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.social-medias {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.social-medias h1 {
+  font-size: 30px;
+}
+
+.media-icons {
+  display: flex;
+  align-items: center;
+  justify-content: center; 
+}
+
+.media-icons a {
+  background-color: #000;
+  height: 0px;
+}
+
+.media-icons svg {
+  margin: 25px 5px 50px 5px;
+  width: 35px;
+  height: 30px;
+}
+
+.links {
+  margin-top: 20px;
+  display: flex;
+  align-items: start;
+  justify-content: center;
+  text-transform: uppercase;
+  color: #000;
+  font-weight: 600;
+}
+
+.links section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+}
+
+.links h1 {
+  text-decoration: underline;
+}
+
+.links a {
+  text-decoration: none;
+  color: #4B5252;
+  font-size: 12px;
+  margin-top: 10px;
+}
+
+.links .number {
+  font-size: 14px;
+}
+
+.links a:hover {
+  text-decoration: underline;
+}
+
 @media (max-width: 875px) {
   .navbar {
     position: relative;
@@ -270,4 +369,5 @@ main {
   .main-filter {
     display: none;
   }
+  
 }
